--- a/docs/rapport/conception.tex
+++ b/docs/rapport/conception.tex
@@ -1,4 +1,4 @@
-\textit{Cette phase d'analyse est un élément indispensable à la bonne réalisation du projet. Dans un premier temps, un modèle plus fidèle à la réalité des schémas stockés dans les SGBDR est présenté. Cette partie est suivit d'une petite réflexion sur l'utilisation des ORM. Sont ensuite parcourus les solutions de génération de graphes pour la représentation des données. Les choix concernant l'interface utilisateur seront également exposés.}
+\textit{Cette phase d'analyse est un élément indispensable à la bonne réalisation du projet. Dans un premier temps, un modèle plus fidèle à la réalité des schémas stockés dans les SGBDR est présenté. Cette partie est suivie d'une petite réflexion sur l'utilisation des ORM. Sont ensuite parcourues les solutions de génération de graphes pour la représentation des données. Les choix concernant l'interface utilisateur seront également exposés.}
 
 \section{Le modèle}
 \subsection{Modèle réellement rencontré}
