--- a/docs/rapport/conclusion.tex
+++ b/docs/rapport/conclusion.tex
@@ -1,4 +1,4 @@
-\textit{Notre application est à ce jour fonctionnel sur PostgreSQL et MySQL, elle permet de générer une représentation presque complète d'un schéma de base de données. Cette représentation peut être exporter dans de nombreux formats dont jpg, png, svg, ps, pdf.}
+\textit{Notre application est à ce jour fonctionnelle sur PostgreSQL et MySQL, elle permet de générer une représentation presque complète d'un schéma de base de données. Cette représentation peut être exportée dans de nombreux formats dont jpg, png, svg, ps, pdf.}
 
 
 \begin{figure}[H]
