--- a/docs/rapport/implementation.tex
+++ b/docs/rapport/implementation.tex
@@ -99,8 +99,8 @@ x11 & xdot & xlib & & & \\
 \end{tabular}
 \end{center}
 
-\subsubsection{Singleton de connexion Hibernate}
-Le sous paquet \texttt{hibernate} contient une classe \texttt{HibernateUtil} respectant le patron de conception \emph{singleton}. Il permet de créer une session \emph{Hibernate} en fournissant le type de SGBD, l'hôte, le nom de la base de données, le nom d'utilisateur, le mot de passe et le port.
+\subsubsection{Connexion Hibernate}
+Le sous paquet \texttt{hibernate} contient une classe \texttt{HibernateUtil} respectant le patron de conception \emph{factory}. Il permet de créer une session \emph{Hibernate} en fournissant le type de SGBD, l'hôte, le nom de la base de données, le nom d'utilisateur, le mot de passe et le port.
 
 La création de la session s'effectue en chargeant le fichier de configuration \emph{Hibernate} correspondant au type de SGBD passé en paramètre, et renvoie une exception si celui-ci est inexistant ou inaccessible.
 
