--- a/docs/rapport/conclusion.tex
+++ b/docs/rapport/conclusion.tex
@@ -4,5 +4,5 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{files/exemple_sortie}
-\caption{Exemple de sortie.}
+\caption{Exemple de sortie (base de données d'un blog \emph{DotClear}).}
 \end{figure}
