--- a/docs/presentation/diapo.tex
+++ b/docs/presentation/diapo.tex
@@ -76,4 +76,13 @@ morekeywords=true
 
 \end{frame}
 
+\section{Besoins}
+\input{besoins}
+
+\section{Conception}
+\input{conception}
+
+\section{implementation}
+\input{implementation}
+
 \end{document}
