--- a/docs/rapport/conception.tex
+++ b/docs/rapport/conception.tex
@@ -8,7 +8,7 @@ Lors de l'étude des métadonnées stockées par les différents SGBD, nous avon
 \begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{files/diag_class_ameliore}
-\caption{Diagramme de classe réellement rencontré.}
+\caption{Diagramme de classes réellement rencontré.}
 \label{figure:diag_classe_reel}
 \end{figure}
 
