--- a/docs/presentation/diapo.tex
+++ b/docs/presentation/diapo.tex
@@ -3,6 +3,7 @@
 \usepackage{hyperref}
 \usepackage[footheight=1em]{beamerthemeboxes}
 \usepackage{listings}
+\usepackage{ulem}
 \usepackage{color}
 %\usepackage{pgfpages}
 %\setbeameroption{show notes on second screen=left}
@@ -84,5 +85,8 @@ morekeywords=true
 
 \section{implementation}
 \input{implementation}
+
+\section{Résultat}
+\input{resultat}
 
 \end{document}
