oups I don't remember

--- a/docs/rapport/cahier_des_charges.tex
+++ b/docs/rapport/cahier_des_charges.tex
@@ -2,7 +2,7 @@
 
 
 \section{Fonctions principales}
-		\subsubsection{Données d'un schéma de base de données}
+		\subsection{Données d'un schéma de base de données}
 		La fonction principale de l'application est de fournir les données d'un schéma d'une base de données. Un schéma est composé de tables, de colonnes et de contraintes. Les informations qui doivent être fournies sont décrites ci-après.
 		
 			\paragraph{tables}
