--- a/docs/presentation/resultat.tex
+++ b/docs/presentation/resultat.tex
@@ -4,10 +4,10 @@
 \item Export du schéma sous de multiples formats
 \textit{\scriptsize
 \begin{tabular}{l l l l l l}
-canon&cmap&cmapx&cmapx\_np&dot&eps \\
-fig & gd & gd2 & gif & gv & imap \\
-imap\_np & ismap & jpe & jpeg & jpg & pdf \\
-plain & plain-ext & png & ps & ps2 & svg \\
+canon&cmap&cmapx&cmapx\_np&dot&\textbf{eps} \\
+\textbf{fig} & gd & gd2 & \textbf{gif} & gv & imap \\
+imap\_np & ismap & jpe & jpeg & \textbf{jpg} & \textbf{pdf} \\
+plain & plain-ext & \textbf{png} & ps & ps2 & \textbf{svg} \\
 svgz & tk & vml & vmlz & vrml & wbmp \\
 x11 & xdot & xlib & & & \\
 \end{tabular}}
