--- a/docs/presentation/implementation.tex
+++ b/docs/presentation/implementation.tex
@@ -63,7 +63,12 @@
 
 \begin{frame}{Implémentation}{Paquets}
 \begin{center}
+\only<1>{
+\includegraphics[width=0.9\textwidth]{files/diag_class_ameliore}
+}
+\only<2>{
 \includegraphics[width=0.5\textwidth]{files/diag_class_final}
+}
 \end{center}
 \end{frame}
 
