--- a/docs/rapport/cahier_des_charges.tex
+++ b/docs/rapport/cahier_des_charges.tex
@@ -20,7 +20,7 @@
 				\end{itemize}
 				
 			\paragraph{contraintes}
-			Une contrainte s'applique sur une ou plusieures colonnes d'une table.
+			Une contrainte s'applique sur une ou plusieurs colonnes d'une table.
 				\begin{itemize}
 					\item NAME, nom de la contrainte
 					\item TYPE, type de la contrainte
@@ -39,7 +39,7 @@
 
 \section{Fonctions contraintes}
 	\subsection{Compatibilité \& extensibilité}
-	L'outil développé devra être compatible avec les SGBDR les plus populaires (\emph{Mysql}, \emph{Postgresql}, \emph{Oracle}, etc.). L'architecture de l'application devra être pensée de manière à pouvoir étendre facilement la compatibilité avec de nouveaux SGBDR en utilisant, par exmple, des fichiers de configuration. De plus, les schémas relationnels étant associés logiquement, elle devra être capable de composer de l’information provenant de l’intégration de ces différents schémas.
+	L'outil développé devra être compatible avec les SGBDR les plus populaires (\emph{Mysql}, \emph{Postgresql}, \emph{Oracle}, etc.). L'architecture de l'application devra être pensée de manière à pouvoir étendre facilement la compatibilité avec de nouveaux SGBDR en utilisant, par exemple, des fichiers de configuration. De plus, les schémas relationnels étant associés logiquement, elle devra être capable de composer de l’information provenant de l’intégration de ces différents schémas.
 	\subsection{Utilisation d'Hibernate}
 	L'objectif de ce projet étant l'application des outils vus pendant les cours de l'UE Gestion de données distribuées (GMIN210), l'outil développé devra utiliser l'ORM \emph{Hibernate} (librairie Java de mapping Object-Relationnel). Cette contrainte est imposée par le sujet. L'exploitation de la solution de projection Objet-Relationnel d'\emph{Hibernate} se fera par définition des fichiers de mapping nécessaires et des classes applicatives qui permettront de manipuler les objets Table, Attribut ou Contrainte.
 	\subsection{Lecture des Métadonnées}
