--- a/docs/rapport/implementation.tex
+++ b/docs/rapport/implementation.tex
@@ -117,7 +117,7 @@ Chaque SGBDR doit posséder quatre fichiers de configuration. La configuration p
 \paragraph{Problématique de la relation \emph{Many-to-Many}}
 Lors de la construction de nos fichiers de mapping, nous avons rencontré un problème au niveau du modèle de données auquel nous étions confrontés (cf. figure~\ref{figure:diag_classe_reel}, page \pageref{figure:diag_classe_reel}). D'après ce modèle, l'entité contrainte est en relation \emph{Many-to-Many} avec l'entité colonne. Dans le modèle relationnel, une telle relation nécessite la création d'une table d'association, permettant la jointure entre ces deux entités. Étant donné que nous travaillons avec des \emph{subselect}, nous ne pouvons pas créer de telles tables. La solution a donc consisté en l'adaptatation du schéma réel afin de pallier à cet imprévu.
 
-L'idée est donc de transformer cette relation problématique en une relation \emph{Many-to-One} (plusieures relations peuvent être en relation avec une seule colonne). Pour cela, il faut utiliser des id composés (\emph{composite-id}) en identifiant une contrainte non plus uniquement pas sa table et son nom, mais par sa table, son nom, et le nom de la colonne. Ainsi, une contrainte s'appliquant sur deux colonnes sera représentée par deux instances de la classe contrainte.
+L'idée est donc de transformer cette relation problématique en une relation \emph{Many-to-One} (plusieurs relations peuvent être en relation avec une seule colonne). Pour cela, il faut utiliser des id composés (\emph{composite-id}) en identifiant une contrainte non plus uniquement pas sa table et son nom, mais par sa table, son nom, et le nom de la colonne. Ainsi, une contrainte s'appliquant sur deux colonnes sera représentée par deux instances de la classe contrainte.
 
 \begin{figure}[H]
 \includegraphics[width=0.6\textwidth]{files/diag_class_final}
