--- a/docs/rapport/conception.tex
+++ b/docs/rapport/conception.tex
@@ -52,12 +52,12 @@ En revanche, cette méthode d'abstraction présente l'inconvénient de générer
 
 \section{Visualisation de graphes}
 	
-	Nous souhaitons avoir une représentation la plus proche possible d'une représentation connue de schéma de base de données afin que celle-ci soit rapidement compréhensible par des personnes averties. Pour ce faire nous avons à notre disposition plusieures librairies permettant l'organisation et la visualisation de graphes.
+	Nous souhaitons avoir une représentation la plus proche possible d'une représentation connue de schéma de base de données afin que celle-ci soit rapidement compréhensible par des personnes averties. Pour ce faire nous avons à notre disposition plusieurs librairies permettant l'organisation et la visualisation de graphes.
 
   \subsection{Librairies possibles}
   	\subsubsection{Graphviz} \textit{Graph Visualization Software}
   	
-			GraphViz est un logiciel de visualisation de graphes écrit en C. C'est un logiciel libre sous EPL\footnote{EPL, Eclipse Public Licence.} développé par AT\&T et les laboratoires Bell. Il offre différents algorithmes de spatialisation. Il est à l'origine du langage de description de graphe DOT. C'est un des logiciels les plus utilisés pour l'affichage de graphes, il permet notamment l'affichage de nœuds représentés sous une forme complexe. De plus, il offre une interface en ligne de commande\footnote{voir \texttt{man graphviz}} aisément utilisable par un programme tiers.
+			Graphviz est un logiciel de visualisation de graphes écrit en C. C'est un logiciel libre sous EPL\footnote{EPL, Eclipse Public Licence.} développé par AT\&T et les laboratoires Bell. Il offre différents algorithmes de spatialisation. Il est à l'origine du langage de description de graphe DOT. C'est un des logiciels les plus utilisés pour l'affichage de graphes, il permet notamment l'affichage de nœuds représentés sous une forme complexe. De plus, il offre une interface en ligne de commande\footnote{voir \texttt{man graphviz}} aisément utilisable par un programme tiers.
 		\subsubsection{JUNG} \textit{Java Universal Network/Graph Framework}
 		
 				JUNG est une API java permettant la modélisation, l'analyse et la visualisation de graphes. C'est un logiciel libre sous licence BSD\footnote{voir http://jung.sourceforge.net/license.txt} qui est développé par l'université de Californie. Cette API semble bien fournie et documentée, mais ne semble pas être en mesure d'afficher des nœuds aux formes complexes. 
@@ -67,7 +67,7 @@ En revanche, cette méthode d'abstraction présente l'inconvénient de générer
 		
 				
   \subsection{Notre choix}
-		Notre choix s'est porté sur GraphViz, et plus particulièrement sur la commande \texttt{dot} qui offre un algorithme de spatialisation hiérarchique. GraphViz présente les principaux avantages d'être extrêmement simple d'utilisation grâce à son interface en ligne de commande et d'offrir la possibilité de générer des nœuds de formes complexes ce qui nous permettra de nous rapprocher d'une représentation d'une entité du formalisme E/A\footnote{Entité/Association}.
+		Notre choix s'est porté sur Graphviz, et plus particulièrement sur la commande \texttt{dot} qui offre un algorithme de spatialisation hiérarchique. Graphviz présente les principaux avantages d'être extrêmement simple d'utilisation grâce à son interface en ligne de commande et d'offrir la possibilité de générer des nœuds de formes complexes ce qui nous permettra de nous rapprocher d'une représentation d'une entité du formalisme E/A\footnote{Entité/Association}.
 
 \section{L'IHM}	
 	\subsection{Les choix possibles}
