modif page garde

--- a/docs/rapport/includes/garde.tex
+++ b/docs/rapport/includes/garde.tex
@@ -7,8 +7,8 @@
     
     \noindent\rule{\linewidth}{.5pt}
     \ligne{\vspace{1.5mm}\titre}
-    \noindent\rule{\linewidth}{.5pt}
-    \ligne{\normalsize{\textsc{\sstitre}}}
+    \noindent\rule{\linewidth}{0.5pt}
+    \ligne{\vspace*{1.5pt}\normalsize{\textsc{\sstitre}}}
     \vfill
     \ligne{%
       \begin{tabular}{l}
