er oups je me sui trompé  pour  le libellé  de  mon commit je suis allé a la ligne et je ne  peu plus effacer // ajout nam

--- a/docs/rapport/intro.tex
+++ b/docs/rapport/intro.tex
@@ -11,7 +11,7 @@ Ce travail a été réalisé par une équipe de trois étudiants en Master Infor
 \item[CLI]\footnote{Commande Line Interface (\og Interface en Ligne de Commande \fg{} en Français).} : Clément
 \item[Mapping] : Clément (\emph{Mysql}), Thibaut (\emph{Postgresql})
 \item[Intégration Hibernate] : Thibaut
-\item[Génération graphique] : Clément
+\item[Génération graphique] : Clément, Namrata
 \item[Affichage de l'image générée] : Namrata
 \end{description}
 
