--- a/docs/rapport/cahier_des_charges.tex
+++ b/docs/rapport/cahier_des_charges.tex
@@ -53,7 +53,7 @@ La figure~\ref{figure:diag_classe_fournit} présente le modèle de données de l
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.6\textwidth]{files/diag_class_origine}
-\caption{Diagramme de classe fourni.}
+\caption{Diagramme de classes fourni.}
 \label{figure:diag_classe_fournit}
 \end{figure}
 
